# itemp

./: AUTHORS  INSTALL  Kbuild  LICENSE  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  itemp_cpu.c  itemp_cpu.h  itemp_file.c  itemp_init.c
cputemp/: Makefile.am  Makefile.in  config.h.in  cputemp.c
module/: Kbuild  Makefile  itemp.c  itemp.h  itemp_cpu.c  itemp_file.c  itemp_file.h  itemp_global.c  itemp_global.h  itemp_init.c
module/udev/: 70-cputemp.rules
