##############################################################################
# $URL$
# $Id$
##############################################################################

# Use this if we have our own macros to call
ACLOCAL_AMFLAGS = -I m4

if BUILD_KERNEL_MODULE
SUBDIRS = module cputemp
else
SUBDIRS = cputemp
endif
